--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
 @import 'bootstrap_overwrite';
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
 @import 'style';
-
