--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
    * Copyright 2011-2022 Twitter, Inc.
    * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
    */
+@import url(../node_modules/bootstrap-icons/font/bootstrap-icons.css);
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
